--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <img src="./assets/images/logo.svg" alt="" />
+        <img id="logo" src="./assets/images/logo.svg" alt="" />
         <button
           class="hambgrbtn"
           aria-controls="primary-navigation"
